Se agregó soporte para que esté hosteado en godaddy

--- a/PhotoSharing.Webservice/PhotoSharing.Webservice.csproj
+++ b/PhotoSharing.Webservice/PhotoSharing.Webservice.csproj
@@ -85,6 +85,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\PublishProfiles\GoDaddy photosharing.pubxml" />
     <None Include="Properties\PublishProfiles\test.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Default.aspx" />
