--- a/PhotoSharing.Webservice/Web.config
+++ b/PhotoSharing.Webservice/Web.config
@@ -13,15 +13,20 @@
       </system.Web>
   -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5.1"/>
+    <compilation debug="true" targetFramework="4.0"/>
     <pages controlRenderingCompatibilityVersion="4.0"/>
+    <customErrors mode="Off" />
+    <trust level="Full"/>
   </system.web>
 
   <connectionStrings>
-    <add connectionString="server=localhost;user id=root;password=skateordie1;persist security info=True;database=photoSharing" name="photoConnectionString"/>
+    
+    <add connectionString="server=50.62.209.6;user id=photosharing;password=iCl4v93?;database=photosharing" name="photoConnectionString"/>
+    <!--<add connectionString="server=localhost;user id=root;password=skateordie1;persist security info=True;database=photoSharing" name="photoConnectionString"/>-->
   </connectionStrings>
   <appSettings>
-    <add key="PhotoPath" value="http://192.168.0.24/PhotoSharing"/>
+    <add key="PhotoPath" value="http://photosharing.balusoft.net"/>
+    <!--<add key="PhotoPath" value="http://192.168.0.10/PhotoSharing"/>-->
     <!--<add key="PhotoPath" value="http://localhost:51507/"/>-->
   </appSettings>
 </configuration>
